<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_login"

            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_register"

            android:title="@string/nav_register" />

        <item
            android:id="@+id/nav_settings"

            android:title="@string/nav_settings" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
    <!--android:icon="@drawable/ic_home_black_24dp"-->